# agora

./: .env.example  .gitignore  .gitmodules  ANNOUNCEMENT.md  App secret.txt  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTERNAL_REVIEW_REQUEST.md  HUMAN_HAND.md  LICENSE  MANIFESTO.md  README.md  REVIEW_AGORA_SPEC_v1.md  SEPOLIA_DEPLOY.md  SPRINT_10A_REPORT.md  SPRINT_10C_REPORT.md  SPRINT_10D_REPORT.md  SPRINT_11_REPORT.md  SPRINT_9B_REPORT.md  SPRINT_9F_REPORT.md  SPRINT_9G_REPORT.md  SPRINT_9H_REPORT.md  docker-compose.yml  implementation-1.md  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .env.example  DEV_SETUP.md  Makefile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_init.py  0002_ledger_and_job_status.py  0003_reputation.py  0004_webhook_deliveries.py  0005_onchain_escrow.py  0006_marketplace_listings.py  0007_jobs_link_listing.py  0008_users_privy.py  0009_anonymise_user_agent_names.py  0010_rfq_requests_bids.py  0011_bid_hash_unique.py  0012_signed_actions.py  0013_jobs_escrow_address.py
apps/backend/docs/: V2_LIVE_STATE.md
apps/backend/pytest-cache-files-owddxsh4/v/cache/: nodeids
apps/backend/src/agora_api/: __init__.py  config.py  logging.py  main.py  pricing.py  rate_limit.py  sponsor.py
apps/backend/src/agora_api/auth/: __init__.py  privy.py
apps/backend/src/agora_api/chain/: __init__.py  escrow.py  watcher.py
apps/backend/src/agora_api/db/: __init__.py  agents_repo.py  base.py  disputes_repo.py  jobs_repo.py  ledger_repo.py  listings_repo.py  models.py  reviews_repo.py  rfq_repo.py  users_repo.py  webhooks_repo.py
apps/backend/src/agora_api/routes/: agents.py  auth.py  bootstrap.py  health.py  jobs.py  listings.py  payments.py  reviews.py  rfq.py  search.py  state.py  stats.py  well_known.py  x402.py
apps/backend/src/agora_api/schemas/: agent.py
apps/backend/src/agora_api/webhooks/: __init__.py  delivery.py  signing.py
apps/backend/tests/: conftest.py  test_agents.py  test_auth.py  test_chain_watcher_filter.py  test_escrow_dispatch.py  test_health.py  test_jobs.py  test_listings.py  test_pricing.py  test_reviews.py  test_rfq.py  test_search.py  test_stats.py  test_webhook_delivery.py  test_webhook_job_flow.py  test_webhook_signing.py  test_webhook_well_known.py  test_x402_endpoint.py
contracts/: .env.example  ADR_M-V2-DECISIONS.md  README.md  SECURITY_REVIEW.md  SECURITY_REVIEW_V2.md  TIMELOCK_DESIGN.md  foundry.toml
deploy/: agora-backup.service  agora-backup.timer
docs/: MILESTONE_2026-05-18_first_onchain_trade.md  MILESTONE_2026-05-19_two_wallet_trade.md  MILESTONE_2026-05-20_first_http_x402_trade.md  MILESTONE_2026-05-20_full_lifecycle_x402_trade.md  architecture.md  x402.md
examples/: code_reviewer_agent.py  e2e_demo.py  echo_agent.py  echo_agent.ts  echo_receiver.py  x402_agent.py  (+2 more)
(+102 files in other folders)
