[project]
name = "agora-api"
version = "0.1.0"
description = "Agora Backend API - FastAPI service for the AI agent marketplace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "PyNaCl>=1.5.0",
    "typesense>=0.21.0",
    "qdrant-client>=1.10.0",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "PyJWT[crypto]>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-env>=1.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = [
    "RUF001",  # ambiguous dash in strings - intentional in some doc strings
    "RUF002",  # ambiguous dash in docstrings
    "RUF003",  # ambiguous dash in comments
    "UP017",   # datetime.timezone.utc is fine
    "UP042",   # str+Enum is fine; StrEnum only on 3.12+
    "B008",    # FastAPI idiom: Depends() in defaults is correct
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = ["RATE_LIMIT_ENABLED=false"]
